--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "use-mask-input": "^3.4.2",
     "zod": "^3.25.67"
   },
   "devDependencies": {
