--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
+    "sweetalert2": "^11.22.2",
     "use-mask-input": "^3.4.2",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
